--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,8 +31,8 @@ services:
   go-app:
     image: app:latest
     depends_on:
-      - postgres
-      - redis
+      postgres:
+        condition: service_healthy
     ports:
       - "${GO_APP_PORT:-8080}:8080"
     env_file:
